--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,9 @@ services:
             - ./config/cruise-config.xml:/godata/config/cruise-config.xml
     go-agent:
         container_name: "gocd-agent"
-        build: ./GoAgentDockerfile
+        build:
+            context: ./
+            dockerfile: GoAgentDockerfile
         user: "0:0"
         networks: 
             - gonet
